# crogine

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  build.sh  crogine.sln  readme.md  vcpkg.json
DynaHouse/: CMakeLists.txt  DynaHouse.vcxproj  DynaHouse.vcxproj.filters
DynaHouse/assets/models/: batcat.cmt  grenade.cmt  room1x1.cmf  room2x1.cmf  scene01.cmf  scene01.cmt  scene03.cmf  scene03.cmt  stars.cmt  test_room.cmf  test_room.cmt
DynaHouse/assets/sprites/: target.spt
DynaHouse/cmake/modules/: FindCROGINE.cmake
DynaHouse/src/: CMakeLists.txt  ErrorCheck.hpp  GameState.cpp  GameState.hpp  LoadingScreen.cpp  LoadingScreen.hpp  Messages.hpp  MyApp.cpp  PlayerDirector.cpp  PlayerDirector.hpp  PlayerWeaponSystem.cpp  PlayerWeaponSystem.hpp  ResourceIDs.hpp
common/: CMakeLists.txt  readme.md
common/doc/: Doxyfile
common/include/crogine/: App.hpp  Config.hpp  Log.hpp  State.hpp  StateStack.hpp  Window.hpp
common/src/: App.cpp  CMakeLists.txt  SDLResource.cpp  SDLresource.cpp  State.cpp  StateStack.cpp  Window.cpp  glad.c
common/src/android/: Android.cpp
common/src/audio/: ALCheck.hpp  AudioBuffer.cpp  AudioFile.hpp  AudioRenderer.cpp  AudioRenderer.hpp  AudioResource.cpp  AudioStream.cpp  NullImpl.hpp  OpenALImpl.cpp  OpenALImpl.hpp  PCMData.hpp  SDLMixerImpl.cpp  SDLMixerImpl.hpp  VorbisLoader.cpp  VorbisLoader.hpp  WavLoader.cpp  WavLoader.hpp  stb_vorbis.c
common/src/core/: App.cpp  Clock.cpp  ConfigFile.cpp  Console.cpp  ConsoleClient.cpp  DefaultLoadingScreen.cpp  DefaultLoadingScreen.hpp  GameController.cpp  MessageBus.cpp  State.cpp  StateStack.cpp  Window.cpp
common/src/detail/: DefaultIcon.inl  DistanceField.cpp  DistanceField.hpp  GLCheck.hpp  PhysicsDebug.cpp  glad.c  glad.h
common/src/ecs/: Component.cpp  Entity.cpp  EntityManager.cpp  Renderable.cpp  Scene.cpp  Sunlight.cpp  System.cpp  SystemManager.cpp
common/src/glad/: GLCheck.hpp
common/src/graphics/: Colour.cpp  Font.cpp  FontResource.cpp  Image.cpp  IqmBuilder.cpp  MaterialData.cpp  MaterialResource.cpp  MeshBuilder.cpp  MeshResource.cpp  PostProcess.cpp  PrimitiveBuilders.cpp  RenderTexture.cpp  ResourceAutomation.cpp  Shader.cpp  ShaderResource.cpp  Spatial.cpp  SpriteSheet.cpp  StaticMeshBuilder.cpp  Texture.cpp  TextureResource.cpp
common/src/imgui/: Gui.cpp  GuiClient.cpp  imgui_render.cpp  imgui_render.h
common/src/network/: NetEvent.cpp  NetHost.cpp
common/src/system/: Clock.cpp  Colour.cpp
common/src/util/: Random.cpp
crogine/: CMakeLists.txt
crogine/cmake/modules/: FindCROGINE.cmake  FindDbgHelp.cmake  FindFreeType.cmake  FindFreetype.cmake  FindLibunwind.cmake  FindOPUS.cmake  FindOpenAL.cmake  FindOpus.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake
crogine/cmake/toolchains/: android-arm.cmake
crogine/extra/: ParticleDirector.hpp  SoundEffectsDirector.hpp  readme.md
crogine/extra/collision_system/: PhysicsDebug.cpp  PhysicsObject.cpp  PhysicsObject.hpp
crogine/extra/directors/: ParticleDirector.cpp  ParticleDirector.hpp  SoundEffectsDirector.cpp
crogine/extra/states/: KeyboardState.cpp  KeyboardState.hpp
crogine/include/crogine/: Config.hpp
crogine/src/: CMakeLists.txt
crogine/src/android/: Android.cpp
crogine/src/audio/: ALCheck.hpp  AudioBuffer.cpp  AudioDevice.cpp  AudioFile.hpp  AudioMixer.cpp  AudioRenderer.cpp  AudioRenderer.hpp  AudioResource.cpp  AudioScape.cpp  AudioSource.cpp  AudioStream.cpp  BufferedStreamLoader.cpp  BufferedStreamLoader.hpp  DynamicAudioStream.cpp  Mp3Loader.cpp  Mp3Loader.hpp  MumbleLink.cpp  NullImpl.hpp  OpenALImpl.cpp  OpenALImpl.hpp  PCMData.hpp  SDLMixerImpl.cpp  SDLMixerImpl.hpp  VorbisLoader.cpp  VorbisLoader.hpp  WavLoader.cpp  WavLoader.hpp  minimp3_ex.h  mojoal.c  stb_vorbis.c
crogine/src/core/: App.cpp  AppPlugin.cpp  Clock.cpp  ConfigFile.cpp  Console.cpp  ConsoleClient.cpp  Cursor.cpp  DefaultLoadingScreen.cpp  DefaultLoadingScreen.hpp  FileSystem.cpp  GameController.cpp  Log.cpp  MessageBus.cpp  State.cpp  StateStack.cpp  String.cpp  SysTime.cpp  Wavetable.cpp  Window.cpp  tinyfiledialogs.c  tinyfiledialogs.h
crogine/src/detail/: BalancedTree.cpp  DefaultIcon.inl  DistanceField.cpp  DistanceField.hpp  GLCheck.hpp  HiResTimer.hpp  ModelBinary.cpp  PhysicsDebug.cpp  PoolLog.cpp  QuadTree.cpp  SDLImageRead.cpp  SDLImageRead.hpp  SDLResource.cpp  StackDump.cpp  StackDump.hpp  StaticMeshFile.cpp  StaticMeshFile.hpp  TextConstruction.cpp  TextConstruction.hpp  VBOAllocation.cpp  backward.cpp  backward.hpp  fa-regular-400.hpp  glad.c  glad.hpp  stb_image.h  ust.hpp
crogine/src/ecs/: Component.cpp  Director.cpp  Entity.cpp  EntityManager.cpp  Renderable.cpp  Scene.cpp  Sunlight.cpp  System.cpp  SystemManager.cpp
crogine/src/graphics/: BillboardMeshBuilder.cpp  BinaryMeshBuilder.cpp  BoundingBox.cpp  CircleMeshBuilder.cpp  Colour.cpp  CubemapTexture.cpp  DepthTexture.cpp  DynamicMeshBuilder.cpp  EnvironmentMap.cpp  Font.cpp  FontResource.cpp  GridMeshBuilder.cpp  Image.cpp  ImageArray.cpp  Iqm.inl  IqmBuilder.cpp  MaterialData.cpp  MaterialResource.cpp  MeshBatch.cpp  MeshBuilder.cpp  MeshData.cpp  MeshResource.cpp  ModelDefinition.cpp  MultiRenderTexture.cpp  Palette.cpp  PrimitiveBuilders.cpp  RenderTarget.cpp  RenderTexture.cpp  ResourceAutomation.cpp  SceneData.cpp  Shader.cpp  ShaderResource.cpp  Shape2D.cpp  SimpleDrawable.cpp  SimpleQuad.cpp  SimpleText.cpp  SimpleVertexArray.cpp  Spatial.cpp  SpriteSheet.cpp  StaticMeshBuilder.cpp  (+6 more)
crogine/src/imgui/: GraphEditor.cpp  Gui.cpp  GuiClient.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuiDatePicker.cpp  ImGuizmo.cpp  ImSequencer.cpp  (+21 more)
samples/golf/: CMakeLists.txt  buildnumber.h  golf.aps  golf.rc  golf.vcxproj  golf.vcxproj.filters  icon.icns  macOS.md  readme.md  resource.h
samples/plugin_template/: CMakeLists.txt  info.xgi  plugin_template.vcxproj  plugin_template.vcxproj.filters  readme.md
samples/scratchpad/: CMakeLists.txt  clubsettings.set  clubstats.set  readme.md  scratchpad.vcxproj  scratchpad.vcxproj.filters
samples/threat_level/: CMakeLists.txt  imgui.ini  readme.md  testwin.vcxproj  testwin.vcxproj.filters
(+3170 files in other folders)
